--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,10 @@ v1.0 pre (15/12/2012)
 =================================
 The definition of '''[class^="icon-"],[class*=" icon-"]''' don't have anymore the font-size, width, height and line-height rules.
 
+BREAKING CHANGES:
+   The class .win-commandimage has changed behavior, now it must be used to display pictures inside a .win-command
+   Instead you must use the class .win-commandicon to display icons from the webfont IcoMoon.
+   See on the Commands section in the Metro Components Page.
 
 
 
