--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,13 +1,20 @@
 =================================
-v1.0 pre (15/12/2012)
+v1.0 pre (16/12/2012)
 =================================
-The definition of '''[class^="icon-"],[class*=" icon-"]''' don't have anymore the font-size, width, height and line-height rules.
+The definition of the CSS rule for selector [class^="icon-"],[class*=" icon-"] has changed, now it doesn't have
+anymore the font-size, width, height and line-height rules.
 
 BREAKING CHANGES:
-   The class .win-commandimage has changed behavior, now it must be used to display pictures inside a .win-command
-   Instead you must use the class .win-commandicon to display icons from the webfont IcoMoon.
-   See on the Commands section in the Metro Components Page.
 
+Commands buttons:
+-----------------
+The class .win-commandimage has changed behavior, now it must be used to display pictures inside a .win-command
+Instead you must use the class .win-commandicon to display icons from the webfont IcoMoon.
+See on the new Command Buttons section in the Metro Components Page.
+Use of IcoMoon character code like &#xe03e; in the content is DEPRECATED and is recommended to replace any use of that
+with the equivalent css class defined in bootmetro-icons.css|less.
+NOTE that for the v1.0 final release, the bootmetro-icons.css|less will be subject to change replacing all character codes with new ones
+within the PUA; Css class names will not change!
 
 
 
