--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,14 +1,15 @@
 =================================
 v0.7
 =================================
-This release has to be considered as a stabilization of v0.6.
-The v1.0 will be completely redone from scratch using as base Bootstrap v3.
+This release must be considered as a stabilization of v0.6.
+The v1.0 will be completely redone from scratch using as base Twitter Bootstrap v3.
 
 BREAKING CHANGES:
    - Replaced icomoon font with a new icomoon set generated with PUA. Many icon-* class names has changed;
    - internal mapping of char codes has changed, please be patient and check every icon you used.
    - the static resources in the content folder has been moved to the assets folder
    - toast markup has changed, now it is conforming to the bootstrap media object model.
+   - listview markup has changed, now it is conforming to the bootstrap media object model.
 
 List of changes:
 ------------------
@@ -21,6 +22,7 @@ new RTL support for metro checkboxes & radio buttons
 move CSS to LESS and integrate build with Bootstrap (backported from 1.0)
 complete Tiles templates (backported from 1.0)
 Toast notifications (backported from 1.0 with changes)
+ListView (backported from 1.0 with changes)
 Pivot view (like WP8) (backported from 1.0)
 Dual license GPL2 + Apache2
 
