--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,7 @@ BREAKING CHANGES:
    - the static resources in the content folder has been moved to the assets folder
    - toast markup has changed, now it is conforming to the bootstrap media object model.
    - listview markup has changed, now it is conforming to the bootstrap media object model.
+   - removed default padding-top: 24px and padding-bottom: 88px (scaffolding.less)
 
 List of changes:
 ------------------
